# ESP32-Touch-LCD-3.5

./: README.md
examples/ESP-IDF/01_factory/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
examples/ESP-IDF/01_factory/components/esp_port/: CMakeLists.txt  esp_3inch5_lcd_port.c  esp_3inch5_lcd_port.h  esp_axp2101_port.cpp  esp_axp2101_port.h  esp_es8311_port.c  esp_es8311_port.h  esp_i2c_port.c  esp_i2c_port.h  esp_pcf85063_port.cpp  esp_pcf85063_port.h  esp_sdcard_port.c  esp_sdcard_port.h  esp_spi_port.c  esp_spi_port.h  esp_wifi_port.c  esp_wifi_port.h
examples/ESP-IDF/02_axp2101_example/: CMakeLists.txt  sdkconfig
examples/ESP-IDF/03_button_power_save/: sdkconfig
examples/ESP-IDF/04_pcf85063_example/: CMakeLists.txt  sdkconfig
examples/ESP-IDF/05_tca9554_example/: sdkconfig
examples/ESP-IDF/06_sd_card_test/: sdkconfig
examples/ESP-IDF/07_lvgl_example/: sdkconfig  sdkconfig.defaults
examples/ESP-IDF/08_lvgl_audio_play/: sdkconfig
examples/ESP-IDF/08_lvgl_audio_play/main/: CMakeLists.txt  idf_component.yml  main.c
examples/ESP-IDF/08_lvgl_audio_play/main/audio_play_driver/: audio_driver.c  audio_driver.h
examples/ESP-IDF/08_lvgl_audio_play/main/hardeware_driver/: bsp_board.c  bsp_board.h
examples/ESP-IDF/08_lvgl_audio_play/main/lvgl_app_music_play/: app_music_play.c  app_music_play.h
examples/ESP-IDF/08_lvgl_audio_play/main/lvgl_app_music_play/asset/: cd_ui.c  music_collect_32.c  music_last_32.c  music_next_32.c  music_play_32.c  music_play_bg.c  music_stop_32.c  music_volume_32.c
examples/ESP-IDF/09_lvgl_image/: sdkconfig
(+42 files in other folders)
